--- a/src/SerialLoops/App.axaml
+++ b/src/SerialLoops/App.axaml
@@ -7,7 +7,7 @@
              xmlns:mintoolbarthemes="using:MiniToolbar.Avalonia.Themes"
              xmlns:dialoghost="using:DialogHostAvalonia"
              RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->    
+             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
@@ -24,7 +24,7 @@
             <NativeMenuItem Header="{x:Static assets:Strings.View__Logs}" Click="Logs_Click"/>
         </NativeMenu>
     </NativeMenu.Menu>
-  
+
     <Application.Styles>
         <FluentTheme />
         <dialoghost:DialogHostStyles />
@@ -50,6 +50,9 @@
         <Style Selector="TextBlock.link:disabled">
             <Setter Property="Foreground" Value="{DynamicResource ResourceKey=DisabledLinkColor}"/>
         </Style>
+        <Style Selector="ComboBox">
+            <Setter Property="IsTextSearchEnabled" Value="True"/>
+        </Style>
     </Application.Styles>
 
     <Application.Resources>
@@ -70,5 +73,5 @@
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
     </Application.Resources>
-    
+
 </Application>
