--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/SceneGotoScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/SceneGotoScriptCommandEditorView.axaml
@@ -4,6 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:assets="using:SerialLoops.Assets"
+             xmlns:controls="using:SerialLoops.Controls"
              xmlns:items="using:SerialLoops.Lib.Items"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:SceneGotoScriptCommandEditorViewModel"
@@ -24,6 +25,7 @@
                     </ControlTheme>
                 </ComboBox.ItemContainerTheme>
             </ComboBox>
+            <controls:ItemLink Item="{Binding SelectedScript}" Tabs="{Binding Tabs}"/>
         </StackPanel>
     </Grid>
 </UserControl>
