--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/DialogueScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/DialogueScriptCommandEditorView.axaml
@@ -33,15 +33,48 @@
 
         <TextBlock Grid.Column="0" Grid.Row="2" Text="{x:Static assets:Strings.Sprite_Entrance_Transition}" Margin="0,12,0,0"/>
         <ComboBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding SpriteEntranceTransitions}" Margin="10,5,0,0"
-                  SelectedItem="{Binding SpriteEntranceTransition}"/>
+                  SelectedItem="{Binding SpriteEntranceTransition}">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="vm:SpriteEntranceTransitionLocalized">
+                    <TextBlock Text="{Binding DisplayText}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+            <ComboBox.ItemContainerTheme>
+                <ControlTheme TargetType="ComboBoxItem" x:DataType="vm:SpriteEntranceTransitionLocalized" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
+                    <Setter Property="TextSearch.Text" Value="{Binding DisplayText}" />
+                </ControlTheme>
+            </ComboBox.ItemContainerTheme>
+        </ComboBox>
 
         <TextBlock Grid.Column="0" Grid.Row="3" Text="{x:Static assets:Strings.Sprite_Exit_Move_Transition}" Margin="0,12,0,0"/>
         <ComboBox Grid.Column="1" Grid.Row="3" ItemsSource="{Binding SpriteExitTransitions}" Margin="10,5,0,0"
-                  SelectedItem="{Binding SpriteExitTransition}"/>
+                  SelectedItem="{Binding SpriteExitTransition}">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="vm:SpriteExitTransitionLocalized">
+                    <TextBlock Text="{Binding DisplayText}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+            <ComboBox.ItemContainerTheme>
+                <ControlTheme TargetType="ComboBoxItem" x:DataType="vm:SpriteExitTransitionLocalized" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
+                    <Setter Property="TextSearch.Text" Value="{Binding DisplayText}" />
+                </ControlTheme>
+            </ComboBox.ItemContainerTheme>
+        </ComboBox>
 
         <TextBlock Grid.Column="0" Grid.Row="4" Text="{x:Static assets:Strings.Sprite_Shake}" Margin="0,12,0,0"/>
         <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding SpriteShakeEffects}" Margin="10,5,0,0"
-                  SelectedItem="{Binding SpriteShakeEffect}"/>
+                  SelectedItem="{Binding SpriteShakeEffect}">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="vm:SpriteShakeLocalized">
+                    <TextBlock Text="{Binding DisplayText}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+            <ComboBox.ItemContainerTheme>
+                <ControlTheme TargetType="ComboBoxItem" x:DataType="vm:SpriteShakeLocalized" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
+                    <Setter Property="TextSearch.Text" Value="{Binding DisplayText}" />
+                </ControlTheme>
+            </ComboBox.ItemContainerTheme>
+        </ComboBox>
 
         <TextBlock Grid.Column="0" Grid.Row="5" Text="{x:Static assets:Strings.Voice_Line}" Margin="0,12,0,0"/>
         <StackPanel Grid.Column="1" Grid.Row="5" Margin="10,5,0,0" Orientation="Horizontal" VerticalAlignment="Center"
@@ -75,7 +108,18 @@
         </ComboBox>
 
         <TextBlock Grid.Column="0" Grid.Row="8" Text="{x:Static assets:Strings.Text_Entrance_Effect}" Margin="0,12,0,0"/>
-        <ComboBox Grid.Column="1" Grid.Row="8" ItemsSource="{Binding TextEntranceEffects}" SelectedItem="{Binding TextEntranceEffect}" Margin="10,5,0,0"/>
+        <ComboBox Grid.Column="1" Grid.Row="8" ItemsSource="{Binding TextEntranceEffects}" SelectedItem="{Binding TextEntranceEffect}" Margin="10,5,0,0">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="vm:TextEntranceEffectLocalized">
+                    <TextBlock Text="{Binding DisplayText}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+            <ComboBox.ItemContainerTheme>
+                <ControlTheme TargetType="ComboBoxItem" x:DataType="vm:TextEntranceEffectLocalized" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
+                    <Setter Property="TextSearch.Text" Value="{Binding DisplayText}" />
+                </ControlTheme>
+            </ComboBox.ItemContainerTheme>
+        </ComboBox>
 
         <TextBlock Grid.Column="0" Grid.Row="9" Text="{x:Static assets:Strings.Sprite_Layer}" Margin="0,12,0,0"/>
         <NumericUpDown Grid.Column="1" Grid.Row="9" Minimum="{Binding MinShort}" Maximum="{Binding MaxShort}" Value="{Binding SpriteLayer}"
