--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/SelectScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/SelectScriptCommandEditorView.axaml
@@ -28,6 +28,18 @@
                     </TextBlock>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
+            <ComboBox.ItemContainerTheme>
+                <ControlTheme TargetType="ComboBoxItem" x:DataType="hlib:ChoicesSectionEntry" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
+                    <Setter Property="TextSearch.Text">
+                        <Setter.Value>
+                            <MultiBinding Converter="{StaticResource TextSubstitionConverter}">
+                                <Binding Path="Text"/>
+                                <Binding Path="$parent[editors:SelectScriptCommandEditorView].((vm:SelectScriptCommandEditorViewModel)DataContext).OpenProject"/>
+                            </MultiBinding>
+                        </Setter.Value>
+                    </Setter>
+                </ControlTheme>
+            </ComboBox.ItemContainerTheme>
         </ComboBox>
         <TextBlock Grid.Column="0" Grid.Row="1" Margin="0,7,0,0" Text="{x:Static assets:Strings.Option_2}"/>
         <ComboBox Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" ItemsSource="{Binding AvailableChoices}" SelectedItem="{Binding Option2}">
@@ -43,6 +55,18 @@
                     </TextBlock>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
+            <ComboBox.ItemContainerTheme>
+                <ControlTheme TargetType="ComboBoxItem" x:DataType="hlib:ChoicesSectionEntry" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
+                    <Setter Property="TextSearch.Text">
+                        <Setter.Value>
+                            <MultiBinding Converter="{StaticResource TextSubstitionConverter}">
+                                <Binding Path="Text"/>
+                                <Binding Path="$parent[editors:SelectScriptCommandEditorView].((vm:SelectScriptCommandEditorViewModel)DataContext).OpenProject"/>
+                            </MultiBinding>
+                        </Setter.Value>
+                    </Setter>
+                </ControlTheme>
+            </ComboBox.ItemContainerTheme>
         </ComboBox>
         <TextBlock Grid.Column="0" Grid.Row="2" Margin="0,7,0,0" Text="{x:Static assets:Strings.Option_3}"/>
         <ComboBox Grid.Column="1" Grid.Row="2" Margin="10,0,0,0" ItemsSource="{Binding AvailableChoices}" SelectedItem="{Binding Option3}">
@@ -58,6 +82,18 @@
                     </TextBlock>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
+            <ComboBox.ItemContainerTheme>
+                <ControlTheme TargetType="ComboBoxItem" x:DataType="hlib:ChoicesSectionEntry" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
+                    <Setter Property="TextSearch.Text">
+                        <Setter.Value>
+                            <MultiBinding Converter="{StaticResource TextSubstitionConverter}">
+                                <Binding Path="Text"/>
+                                <Binding Path="$parent[editors:SelectScriptCommandEditorView].((vm:SelectScriptCommandEditorViewModel)DataContext).OpenProject"/>
+                            </MultiBinding>
+                        </Setter.Value>
+                    </Setter>
+                </ControlTheme>
+            </ComboBox.ItemContainerTheme>
         </ComboBox>
         <TextBlock Grid.Column="0" Grid.Row="3" Margin="0,7,0,0" Text="{x:Static assets:Strings.Option_4}"/>
         <ComboBox Grid.Column="1" Grid.Row="3" Margin="10,0,0,0" ItemsSource="{Binding AvailableChoices}" SelectedItem="{Binding Option4}">
@@ -73,6 +109,18 @@
                     </TextBlock>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
+            <ComboBox.ItemContainerTheme>
+                <ControlTheme TargetType="ComboBoxItem" x:DataType="hlib:ChoicesSectionEntry" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
+                    <Setter Property="TextSearch.Text">
+                        <Setter.Value>
+                            <MultiBinding Converter="{StaticResource TextSubstitionConverter}">
+                                <Binding Path="Text"/>
+                                <Binding Path="$parent[editors:SelectScriptCommandEditorView].((vm:SelectScriptCommandEditorViewModel)DataContext).OpenProject"/>
+                            </MultiBinding>
+                        </Setter.Value>
+                    </Setter>
+                </ControlTheme>
+            </ComboBox.ItemContainerTheme>
         </ComboBox>
 
         <TextBlock Grid.Column="0" Grid.Row="4" Margin="0,7,0,0" Text="{x:Static assets:Strings.Display_Flag_1}"/>
