--- a/src/SerialLoops/Views/Dialogs/GraphicSelectionDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/GraphicSelectionDialog.axaml
@@ -12,7 +12,7 @@
         Padding="10"
         MinWidth="450"
         MinHeight="400"
-        Width="450"
+        SizeToContent="Width"
         Height="550"
         Loaded="Window_Loaded"
         Title="{x:Static assets:Strings.Select_Graphic}"
