--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/ScreenFadeOutScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/ScreenFadeOutScriptCommandEditorView.axaml
@@ -4,6 +4,7 @@
              xmlns:vm="using:SerialLoops.ViewModels.Editors.ScriptCommandEditors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:assets="using:SerialLoops.Assets"
+             xmlns:controls="using:SerialLoops.Controls"
              xmlns:utility="using:SerialLoops.Utility"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:ScreenFadeOutScriptCommandEditorViewModel"
@@ -22,6 +23,9 @@
 
         <TextBlock Grid.Column="0" Grid.Row="2" Margin="0,7,0,0" Text="{x:Static assets:Strings.CUSTOM_COLOR}"/>
         <ColorPicker Grid.Column="1" Grid.Row="2" Margin="10,0,0,0" Color="{Binding CustomColor, Converter={StaticResource ColorConverter}, Mode=TwoWay}"/>
+
+        <TextBlock Grid.Column="0" Grid.Row="3" Margin="0,15,0,0" Text="{x:Static assets:Strings.Location}"/>
+        <controls:ScreenSelector Grid.Column="1" Grid.Row="3" Margin="10,0,0,0" DataContext="{Binding ScreenSelector}"/>
 
         <TextBlock Grid.Column="0" Grid.Row="4" Margin="0,7,0,0" Text="{x:Static assets:Strings.Color}"/>
         <ComboBox Grid.Column="1" Grid.Row="4" Margin="10,0,0,0" ItemsSource="{Binding Colors}" SelectedItem="{Binding Color}">
