--- a/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
@@ -8,6 +8,13 @@
              x:DataType="vm:ScriptEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptEditorView">
     <Grid ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto,*">
+        <StackPanel IsVisible="False">
+            <Button Command="{Binding CutCommand}" HotKey="{Binding CutHotKey}"/>
+            <Button Command="{Binding CopyCommand}" HotKey="{Binding CopyHotKey}"/>
+            <Button Command="{Binding PasteCommand}" HotKey="{Binding PasteHotKey}"/>
+            <Button Command="{Binding DeleteScriptCommandOrSectionCommand}" HotKey="{Binding DeleteHotKey}"/>
+        </StackPanel>
+
         <StackPanel Grid.Column="0" Grid.Row="0" Margin="5" Spacing="5" HorizontalAlignment="Right" Orientation="Horizontal">
             <Button Command="{Binding AddScriptCommandCommand}">
                 <Svg Path="avares://SerialLoops/Assets/Icons/Add.svg" Width="22"/>
@@ -23,7 +30,8 @@
             </Button>
         </StackPanel>
         <TreeDataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="{Binding Source}"
-                      AutoDragDropRows="True" RowDragStarted="TreeDataGrid_OnRowDragStarted" RowDrop="TreeDataGrid_OnRowDrop"/>
+                      AutoDragDropRows="True" RowDragStarted="TreeDataGrid_OnRowDragStarted" RowDrop="TreeDataGrid_OnRowDrop"
+                      MaxWidth="300"/>
         <Grid Grid.Column="1" Grid.Row="1" ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto">
             <Image Source="{Binding PreviewBitmap, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
                    Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Width="256"/>
