--- a/src/SerialLoops/Views/Panels/HomePanel.axaml
+++ b/src/SerialLoops/Views/Panels/HomePanel.axaml
@@ -9,10 +9,6 @@
              x:DataType="vm:HomePanelViewModel"
              x:Class="SerialLoops.Views.Panels.HomePanel">
 
-    <Design.DataContext>
-        <vm:HomePanelViewModel/>
-    </Design.DataContext>
-
     <StackPanel HorizontalAlignment="Center">
         <StackPanel Margin="15" Spacing="5" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Svg Path="avares://SerialLoops/Assets/Icons/AppIcon.svg" Width="96"/>
@@ -24,28 +20,41 @@
                 <TextBlock Classes="h2" Text="{x:Static assets:Strings.Start}"/>
                 <StackPanel Orientation="Horizontal" Spacing="5">
                     <Svg Path="avares://SerialLoops/Assets/Icons/New.svg" Width="16"/>
-                    <controls:LinkButton OnClick="NewProject_PointerPressed" Text="{x:Static assets:Strings.New_Project}"/>
+                    <controls:LinkButton Command="{Binding MainWindow.NewProjectCommand}" Text="{x:Static assets:Strings.New_Project}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Spacing="5">
                     <Svg Path="avares://SerialLoops/Assets/Icons/Open.svg" Width="16"/>
-                    <controls:LinkButton OnClick="OpenProject_PointerPressed" Text="{x:Static assets:Strings.Open_Project}"/>
+                    <controls:LinkButton Command="{Binding MainWindow.OpenProjectCommand}" Text="{x:Static assets:Strings.Open_Project}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Spacing="5">
                     <Svg Path="avares://SerialLoops/Assets/Icons/Edit_Save.svg" Width="16"/>
-                    <controls:LinkButton OnClick="EditSaveFile_PointerPressed" Text="{x:Static assets:Strings.Edit_Save_File}"/>
+                    <controls:LinkButton Command="{Binding MainWindow.EditSaveCommand}" Text="{x:Static assets:Strings.Edit_Save_File}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Spacing="5">
                     <Svg Path="avares://SerialLoops/Assets/Icons/Options.svg" Width="16"/>
-                    <controls:LinkButton OnClick="Preferences_PointerPressed" Text="{x:Static assets:Strings.Preferences}"/>
+                    <controls:LinkButton Command="{Binding MainWindow.PreferencesCommand}" Text="{x:Static assets:Strings.Preferences}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Spacing="5">
                     <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16"/>
-                    <controls:LinkButton OnClick="About_PointerPressed" Text="{x:Static assets:Strings.About}"/>
+                    <controls:LinkButton Command="{Binding MainWindow.AboutCommand}" Text="{x:Static assets:Strings.About}"/>
                 </StackPanel>
             </StackPanel>
             <StackPanel DockPanel.Dock="Right" Margin="13" Spacing="10" MinWidth="450" MinHeight="400">
                 <TextBlock Classes="h2" Text="{x:Static assets:Strings.Recents}"/>
-                <StackPanel Spacing="15" Name="RecentsPanel"/>
+                <ItemsControl ItemsSource="{Binding RecentProjects}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate DataType="vm:RecentProjectViewModel">
+                            <StackPanel Orientation="Horizontal" Spacing="5" Margin="7">
+                                <Svg Path="{Binding IconPath}" Width="16"/>
+                                <StackPanel Orientation="Horizontal" Spacing="2">
+                                    <TextBlock Text="{x:Static assets:Strings.Missing_}" IsVisible="{Binding IsMissing}" Foreground="{StaticResource DisabledLinkColor}"/>
+                                    <controls:LinkButton Text="{Binding Text}" Command="{Binding Command}" IsEnabled="{Binding !IsMissing}"
+                                                         Foreground="{StaticResource {Binding LinkColorKey}}"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </StackPanel>
         </DockPanel>
     </StackPanel>
