Add tests for some controls

--- a/test/SerialLoops.Tests.Headless/App.axaml
+++ b/test/SerialLoops.Tests.Headless/App.axaml
@@ -36,4 +36,23 @@
             <Setter Property="Foreground" Value="{DynamicResource ResourceKey=DisabledLinkColor}"/>
         </Style>
     </Application.Styles>
+
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Light">
+                    <SolidColorBrush x:Key="LinkColor">Blue</SolidColorBrush>
+                    <SolidColorBrush x:Key="DisabledLinkColor">DarkGray</SolidColorBrush>
+                    <SolidColorBrush x:Key="GroupLineColor">DarkGray</SolidColorBrush>
+                    <Color x:Key="CropResizeOverlayColor">#55000000</Color>
+                </ResourceDictionary>
+                <ResourceDictionary x:Key="Dark">
+                    <SolidColorBrush x:Key="LinkColor">Cyan</SolidColorBrush>
+                    <SolidColorBrush x:Key="DisabledLinkColor">Gray</SolidColorBrush>
+                    <SolidColorBrush x:Key="GroupLineColor">WhiteSmoke</SolidColorBrush>
+                    <Color x:Key="CropResizeOverlayColor">#AAFFFFFF</Color>
+                </ResourceDictionary>
+            </ResourceDictionary.ThemeDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
