--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/SndPlayScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/SndPlayScriptCommandEditorView.axaml
@@ -28,7 +28,18 @@
         </StackPanel>
 
         <TextBlock Grid.Column="0" Grid.Row="1" Margin="0,7,0,0" Text="{x:Static assets:Strings.Mode}"/>
-        <ComboBox Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" ItemsSource="{Binding SfxPlayModes}" SelectedItem="{Binding SfxMode}"/>
+        <ComboBox Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" ItemsSource="{Binding SfxPlayModes}" SelectedItem="{Binding SfxMode}">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="vm:SfxModeLocalized">
+                    <TextBlock Text="{Binding DisplayText}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+            <ComboBox.ItemContainerTheme>
+                <ControlTheme TargetType="ComboBoxItem" x:DataType="vm:SfxModeLocalized" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
+                    <Setter Property="TextSearch.Text" Value="{Binding DisplayText}" />
+                </ControlTheme>
+            </ComboBox.ItemContainerTheme>
+        </ComboBox>
 
         <TextBlock Grid.Column="0" Grid.Row="2" Margin="0,7,0,0" Text="{x:Static assets:Strings.Volume}"/>
         <NumericUpDown Grid.Column="1" Grid.Row="2" Margin="10,0,0,0" Minimum="0" Maximum="100" Value="{Binding Volume}"
