--- a/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
@@ -8,8 +8,15 @@
              x:DataType="vm:ScriptEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptEditorView">
     <Grid ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto,*">
+        <StackPanel IsVisible="False">
+            <Button Command="{Binding CutCommand}" HotKey="{Binding CutHotKey}"/>
+            <Button Command="{Binding CopyCommand}" HotKey="{Binding CopyHotKey}"/>
+            <Button Command="{Binding PasteCommand}" HotKey="{Binding PasteHotKey}"/>
+            <Button Command="{Binding DeleteScriptCommandOrSectionCommand}" HotKey="{Binding DeleteHotKey}"/>
+        </StackPanel>
+
         <StackPanel Grid.Column="0" Grid.Row="0" Margin="5" Spacing="5" HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button Command="{Binding AddScriptCommandCommand}">
+            <Button Command="{Binding AddScriptCommandCommand}" HotKey="{Binding AddCommandHotKey}">
                 <Svg Path="avares://SerialLoops/Assets/Icons/Add.svg" Width="22"/>
             </Button>
             <Button Command="{Binding AddScriptSectionCommand}">
@@ -22,7 +29,10 @@
                 <Svg Path="avares://SerialLoops/Assets/Icons/Clear.svg" Width="22"/>
             </Button>
         </StackPanel>
-        <TreeDataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="{Binding Source}"/>
+        <TreeDataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="{Binding Source}"
+                      AutoDragDropRows="True" RowDragStarted="TreeDataGrid_OnRowDragStarted" RowDrop="TreeDataGrid_OnRowDrop"
+                      MaxWidth="300" Name="CommandTree">
+        </TreeDataGrid>
         <Grid Grid.Column="1" Grid.Row="1" ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto">
             <Image Source="{Binding PreviewBitmap, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
                    Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Width="256"/>
