--- a/src/SerialLoops/Views/Dialogs/SearchDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/SearchDialog.axaml
@@ -20,6 +20,7 @@
         <Grid RowDefinitions="Auto,Auto,Auto,*" HorizontalAlignment="Center" VerticalAlignment="Top">
             <StackPanel IsVisible="False">
                 <Button Command="{Binding CloseCommand}" HotKey="{Binding CloseKeyGesture}"></Button>
+                <Button Command="{Binding DeepSearchCommand}" HotKey="{Binding DeepSearchGesture}"></Button>
             </StackPanel>
             <TextBox Grid.Row="0" Name="Search" Width="520" Margin="0 10"
                      Watermark="{x:Static assets:Strings.Search___}">
@@ -32,11 +33,18 @@
                 </i:Interaction.Behaviors>
             </TextBox>
             <Grid Grid.Row="1" ColumnDefinitions="Auto,*">
-                <StackPanel Grid.Column="0">
-
+                <!-- Scope filters -->
+                <StackPanel Grid.Column="0" Spacing="5" Margin="0 0 5 0">
+                    <TextBlock FontWeight="Bold" Text="{x:Static assets:Strings.Search_Scope}" />
+                    <Grid Name="ScopeFiltersGrid" ColumnDefinitions="*,Auto,*,Auto" RowDefinitions="*,*,*,*,*,*,Auto" />
+                </StackPanel>
+                <!-- Item type filters -->
+                <StackPanel Grid.Column="1" Spacing="5" Margin="5 0 0 0">
+                    <TextBlock FontWeight="Bold" Text="{x:Static assets:Strings.Filter_by_Item}" />
+                    <Grid Name="TypeFiltersGrid" ColumnDefinitions="*,Auto,*,Auto,*,Auto" RowDefinitions="*,*,*,*,*,*,Auto" />
                 </StackPanel>
             </Grid>
-            <TextBlock Grid.Row="2" Text="{Binding ResultsCount}" TextAlignment="Center" Height="40" />
+            <TextBlock Grid.Row="2" Margin="10" FontWeight="Bold" Text="{Binding SearchStatusLabel}" TextAlignment="Center" />
             <TreeDataGrid Grid.Row="3" Name="Viewer" ShowColumnHeaders="False" CanUserResizeColumns="False" Source="{Binding Source}">
                 <i:Interaction.Behaviors>
                     <ia:EventTriggerBehavior EventName="KeyUp" SourceObject="{Binding #Viewer}">
