--- a/src/SerialLoops/Views/Editors/SaveEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/SaveEditorView.axaml
@@ -1,14 +1,14 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:vm="using:SerialLoops.ViewModels.Panels"
+             xmlns:vm="using:SerialLoops.ViewModels.Editors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:assets="using:SerialLoops.Assets"
              xmlns:controls="using:SerialLoops.Controls"
              xmlns:gbox="using:GroupBox.Avalonia.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:DataType="vm:SaveEditorPanelViewModel"
-             x:Class="SerialLoops.Views.Panels.SaveEditorPanelView">
+             x:DataType="vm:SaveEditorViewModel"
+             x:Class="SerialLoops.Views.Editors.SaveEditorView">
     <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="*" HorizontalAlignment="Center">
         <gbox:GroupBox Grid.Row="0" Margin="5" Header="{x:Static assets:Strings.Save_Files}"
                        Theme="{StaticResource GroupBoxClassic}">
